DEX-27385 | fix: align pills inside p

--- a/_src-lp/blocks/new-product-cards/new-product-cards.scss
+++ b/_src-lp/blocks/new-product-cards/new-product-cards.scss
@@ -154,6 +154,10 @@
                             line-height: 14px;
                             color: #555;
                         }
+
+                        &:has(.blue-pill) {
+                            display: flex;
+                        }
                     }
 
                     .green-tag {
